k8s/dind/deployment-code-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vscode-ssh-demo
  namespace: demo-dev
  labels:
    app: vscode-ssh-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vscode-ssh-demo
  template:
    metadata:
      labels:
        app: vscode-ssh-demo
    spec:
      containers:
      - name: code-server
        image: codercom/code-server:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh", "-c"]
        args:
          - |
            [...]
        ports:
        - containerPort: 22
          name: ssh
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: vscode-ssh-svc
  namespace: demo-dev
spec:
  type: ClusterIP
  ports:
  - port: 22
    targetPort: 22
    name: ssh
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: vscode-ssh-demo
