k8s/dind/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vscode-dind
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vscode-dind
  template:
    metadata:
      labels:
        app: vscode-dind
    spec:
      containers:
        - name: code-server
          image: codercom/code-server:latest
          args: ["--auth", "password"] # 使用密碼登入，也可設為 none
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: docker-bin
              mountPath: /usr/local/bin/docker
              subPath: docker # 只掛載單一檔案到指定路徑
            - name: docker-bin
              mountPath: /usr/local/bin/docker-compose
              subPath: docker-compose # 同樣掛載 compose
            - name: workspace-volume
              mountPath: /home/coder/project
        - name: dind
          image: docker:dind
          securityContext:
            privileged: true # DinD 必須使用特權模式
          volumeMounts:
            - name: workspace-volume
              mountPath: /home/coder/project
      volumes:
        - name: docker-bin
          emptyDir: {}
        - name: workspace-volume
          persistentVolumeClaim:
            claimName: dind-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vscode-svc
spec:
  selector:
    app: vscode-dind
  ports:
    - port: 80
      targetPort: 8080
      name: http
    - port: 8180
      targetPort: 8180
      name: pgadmin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vscode-ingress
  annotations:
    # 這是重點：讓 code-server 的 Websocket 能正常運作
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # 關鍵：將連線路徑重定向為根目錄
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: vscode.localhost
    http:
      paths:
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: vscode-svc
      #       port:
      #         number: 80
      # - path: /test-app # 新增的路徑
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: vscode-svc
      #       port:
      #         number: 8180
      - path: /()(.*)  # 對應 code-server
        pathType: ImplementationSpecific
        backend:
          service:
            name: vscode-svc
            port:
              number: 80
      - path: /test-app(/|$)(.*) # 對應 pgadmin
        pathType: ImplementationSpecific
        backend:
          service:
            name: vscode-svc
            port:
              number: 8180
